// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> block renders block primary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 gghOAn Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 hBDZyG"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 cJrlLI"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> disabled Renders a disabled Primary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 fSrNsE Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
    disabled=""
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 cZfose"
      color="light.150"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> disabled Renders a disabled Tertiary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 fMsdCs Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
    disabled=""
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 eGSpCE"
      color="shade.940"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> disabled renders a disabled Secondary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 kZndFp Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
    disabled=""
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 eGSpCE"
      color="shade.940"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> icon renders <Button /> with Info icon  1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <svg
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 fIWTfg"
    />
    <div
      class="Textweb__Text-sc-6jf9e4-0 cJrlLI"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> icon renders a large Primary <Button /> with left icon 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 eFHgXX Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <svg
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 fIWTfg"
    />
    <div
      class="Textweb__Text-sc-6jf9e4-0 cJrlLI"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> icon renders a large Primary <Button /> with right icon 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 eFHgXX Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 cJrlLI"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 keYFvM"
    />
    <svg
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> size renders a large Primary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 eFHgXX Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 cJrlLI"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size renders a small Primary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 iWtrZV"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size renders a small Primary <Button /> 2`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 iWtrZV"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size renders xsmall primary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 hqmUpj Sizeweb__Size-sc-10bl685-0 yoKtN Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 dptpNs"
      color="light.100"
      data-testid="ds-text"
    >
      CLICK ME
    </div>
  </button>
</div>
`;

exports[`<Button /> variant Renders a large Tertiary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 gHLFzK Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 eFHgXX Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 WxbKL"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant renders a large Secondary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 hpXFLM Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 eFHgXX Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 WxbKL"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant renders a medium(Default) Secondary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 hpXFLM Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 WxbKL"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant renders a medium(Default) Tertiary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 gHLFzK Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 WxbKL"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant renders a small Primary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 faEXXD Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 iWtrZV"
      color="light.100"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant renders a small Tertiary <Button /> 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-gxhxmy-0 gHLFzK Spaceweb__Space-njatzl-0 gkgBsY Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 dfbkqx"
    color="primary"
    data-testid="ds-button"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 fZRaOO"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;
